# libsquish

./: CMakeLists.txt  GNUmakefile  colourfit.h  libSquish.pro  maths.cpp
CMakeModules/: FindlibSquish.cmake
extra/: squishpng.cpp
squish.xcodeproj/: project.pbxproj
